fix: add initialization cell and fix kernel switch issues in setup notebook
- Add reusable initialization cell after Step 1 with PROJECT_ROOT_MARKERS and get_project_root()
- Update Step 2 to always run (remove skip option) and use initialization utilities
- Update Step 3 to check builtins for utilities after kernel switches
- Update Step 4 to check builtins for utilities with proper error handling
- Fixes NameError issues when skipping Step 2 or after kernel switches
- All steps now resilient to kernel restarts by checking builtins module

--- a/notebooks/setup/complete_setup_guide.ipynb
+++ b/notebooks/setup/complete_setup_guide.ipynb
@@ -170,12 +170,109 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ============================================================================\n",
+    "# INITIALIZATION: Project Root Detection Utilities\n",
+    "# ============================================================================\n",
+    "# ⚠️ IMPORTANT: Run this cell after any kernel restart or kernel switch!\n",
+    "# This cell defines essential utilities used throughout the notebook.\n",
+    "# ============================================================================\n",
+    "\n",
+    "import os\n",
+    "import builtins\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Constants for project root detection\n",
+    "NOTEBOOK_FILENAME = \"complete_setup_guide.ipynb\"\n",
+    "PROJECT_ROOT_MARKERS = ((\"src\", \"api\"), (\"scripts\", \"setup\"))\n",
+    "NOTEBOOK_SETUP_DIR = \"setup\"\n",
+    "NOTEBOOKS_DIR = \"notebooks\"\n",
+    "\n",
+    "\n",
+    "def get_project_root():\n",
+    "    \"\"\"Get project root directory, detecting it if needed.\n",
+    "    \n",
+    "    This function works regardless of where the notebook is opened from.\n",
+    "    It stores the result in builtins so it persists across cells.\n",
+    "    \n",
+    "    ⚠️ IMPORTANT: This function must be defined before Step 2, 3, and 4.\n",
+    "    If you get a NameError, re-run this initialization cell.\n",
+    "    \"\"\"\n",
+    "    # Check if already stored (persists across cells in same kernel)\n",
+    "    if hasattr(builtins, '__project_root__'):\n",
+    "        return builtins.__project_root__\n",
+    "    \n",
+    "    # Try to find project root\n",
+    "    current = Path.cwd()\n",
+    "    \n",
+    "    # Check if we're already in project root\n",
+    "    if (current / PROJECT_ROOT_MARKERS[0][0] / PROJECT_ROOT_MARKERS[0][1]).exists() and \\\n",
+    "       (current / PROJECT_ROOT_MARKERS[1][0] / PROJECT_ROOT_MARKERS[1][1]).exists():\n",
+    "        project_root = current\n",
+    "    # Check if we're in notebooks/setup/ (go up 2 levels)\n",
+    "    elif (current / NOTEBOOK_FILENAME).exists() or current.name == NOTEBOOK_SETUP_DIR:\n",
+    "        project_root = current.parent.parent\n",
+    "        # Verify it's actually the project root\n",
+    "        if not ((project_root / PROJECT_ROOT_MARKERS[0][0] / PROJECT_ROOT_MARKERS[0][1]).exists() and \n",
+    "                (project_root / PROJECT_ROOT_MARKERS[1][0] / PROJECT_ROOT_MARKERS[1][1]).exists()):\n",
+    "            project_root = current\n",
+    "    # Check if we're in notebooks/ (go up 1 level)\n",
+    "    elif current.name == NOTEBOOKS_DIR:\n",
+    "        project_root = current.parent\n",
+    "        # Verify it's actually the project root\n",
+    "        if not ((project_root / PROJECT_ROOT_MARKERS[0][0] / PROJECT_ROOT_MARKERS[0][1]).exists() and \n",
+    "                (project_root / PROJECT_ROOT_MARKERS[1][0] / PROJECT_ROOT_MARKERS[1][1]).exists()):\n",
+    "            project_root = current\n",
+    "    else:\n",
+    "        # Try going up from current directory\n",
+    "        project_root = current\n",
+    "        for parent in current.parents:\n",
+    "            if (parent / PROJECT_ROOT_MARKERS[0][0] / PROJECT_ROOT_MARKERS[0][1]).exists() and \\\n",
+    "               (parent / PROJECT_ROOT_MARKERS[1][0] / PROJECT_ROOT_MARKERS[1][1]).exists():\n",
+    "                project_root = parent\n",
+    "                break\n",
+    "    \n",
+    "    # Change to project root and store it\n",
+    "    os.chdir(project_root)\n",
+    "    builtins.__project_root__ = project_root\n",
+    "    builtins.__PROJECT_ROOT_MARKERS__ = PROJECT_ROOT_MARKERS\n",
+    "    builtins.__NOTEBOOK_FILENAME__ = NOTEBOOK_FILENAME\n",
+    "    builtins.__NOTEBOOK_SETUP_DIR__ = NOTEBOOK_SETUP_DIR\n",
+    "    builtins.__NOTEBOOKS_DIR__ = NOTEBOOKS_DIR\n",
+    "    builtins.__get_project_root__ = get_project_root\n",
+    "    \n",
+    "    return project_root\n",
+    "\n",
+    "\n",
+    "# Initialize project root detection\n",
+    "try:\n",
+    "    project_root = get_project_root()\n",
+    "    print(\"✅ Initialization complete!\")\n",
+    "    print(f\"   Project root: {project_root}\")\n",
+    "    print(f\"   Working directory: {Path.cwd()}\")\n",
+    "    print(\"\\n📝 These utilities are now available for all subsequent steps:\")\n",
+    "    print(\"   - PROJECT_ROOT_MARKERS\")\n",
+    "    print(\"   - get_project_root()\")\n",
+    "    print(\"\\n⚠️  If you switch kernels, re-run this cell first!\")\n",
+    "except Exception as e:\n",
+    "    print(f\"⚠️  Initialization warning: {e}\")\n",
+    "    print(\"   This is okay if you haven't cloned the repository yet.\")\n",
+    "    print(\"   Continue to Step 2 to set up the repository.\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Step 2: Repository Setup\n",
     "\n",
-    "If you haven't cloned the repository yet, follow the instructions below. If you're already in the repository, you can skip this step.\n"
+    "**⚠️ IMPORTANT:** Always run this step, even if you're already in the repository. This step verifies your repository setup and ensures the working directory is correct.\n",
+    "\n",
+    "**Note:** If you just switched kernels (e.g., to `warehouse-assistant`), make sure you've run the **Initialization** cell above first!\n"
    ]
   },
   {
@@ -184,105 +281,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ============================================================================\n",
+    "# Step 2: Repository Setup\n",
+    "# ============================================================================\n",
+    "# This step verifies repository setup and ensures correct working directory.\n",
+    "# It uses the utilities defined in the Initialization cell above.\n",
+    "# ============================================================================\n",
+    "\n",
     "import os\n",
+    "import builtins\n",
     "from pathlib import Path\n",
-    "# Constant for notebook filename to avoid duplication\n",
-    "NOTEBOOK_FILENAME = \"complete_setup_guide.ipynb\"\n",
     "\n",
-    "# Constants for project root detection (to avoid duplication)\n",
-    "PROJECT_ROOT_MARKERS = (\"src\", \"api\"), (\"scripts\", \"setup\")\n",
-    "NOTEBOOK_SETUP_DIR = \"setup\"\n",
-    "NOTEBOOKS_DIR = \"notebooks\"\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Detect project root: navigate from current directory to find project root\n",
-    "# This handles cases where notebook is opened from notebooks/setup/ or project root\n",
-    "def find_project_root():\n",
-    "    \"\"\"Find the project root directory.\"\"\"\n",
-    "    current = Path.cwd()\n",
-    "    \n",
-    "    # Check if we're already in project root\n",
-    "    if (current / PROJECT_ROOT_MARKERS[0][0] / PROJECT_ROOT_MARKERS[0][1]).exists() and (current / PROJECT_ROOT_MARKERS[1][0] / PROJECT_ROOT_MARKERS[1][1]).exists():\n",
-    "        return current\n",
-    "\n",
-    "\n",
-    "def get_project_root():\n",
-    "    \"\"\"Get project root directory, detecting it if needed.\n",
-    "    \n",
-    "    This function works regardless of where the notebook is opened from.\n",
-    "    It stores the result in builtins so it persists across cells.\n",
-    "    \"\"\"\n",
-    "    import builtins\n",
-    "    import os\n",
-    "    from pathlib import Path\n",
-    "    \n",
-    "    # Check if already stored\n",
-    "    if hasattr(builtins, '__project_root__'):\n",
-    "        return builtins.__project_root__\n",
-    "    \n",
-    "    # Try to find project root\n",
-    "    current = Path.cwd()\n",
-    "    \n",
-    "    # Check if we're already in project root\n",
-    "    if (current / PROJECT_ROOT_MARKERS[0][0] / PROJECT_ROOT_MARKERS[0][1]).exists() and (current / PROJECT_ROOT_MARKERS[1][0] / PROJECT_ROOT_MARKERS[1][1]).exists():\n",
-    "        project_root = current\n",
-    "    # Check if we're in notebooks/setup/ (go up 2 levels)\n",
-    "    elif (current / NOTEBOOK_FILENAME).exists() or current.name == NOTEBOOK_SETUP_DIR:\n",
-    "        project_root = current.parent.parent\n",
-    "    # Check if we're in notebooks/ (go up 1 level)\n",
-    "    elif current.name == NOTEBOOKS_DIR:\n",
-    "        project_root = current.parent\n",
+    "# Ensure initialization utilities are available\n",
+    "# If they're not defined, try to get them from builtins (from initialization cell)\n",
+    "if 'PROJECT_ROOT_MARKERS' not in globals():\n",
+    "    if hasattr(builtins, '__PROJECT_ROOT_MARKERS__'):\n",
+    "        PROJECT_ROOT_MARKERS = builtins.__PROJECT_ROOT_MARKERS__\n",
+    "        NOTEBOOK_FILENAME = builtins.__NOTEBOOK_FILENAME__\n",
+    "        NOTEBOOK_SETUP_DIR = builtins.__NOTEBOOK_SETUP_DIR__\n",
+    "        NOTEBOOKS_DIR = builtins.__NOTEBOOKS_DIR__\n",
+    "        get_project_root = builtins.__get_project_root__\n",
     "    else:\n",
-    "        # Try going up from current directory\n",
-    "        project_root = current\n",
-    "        for parent in current.parents:\n",
-    "            if (parent / PROJECT_ROOT_MARKERS[0][0] / PROJECT_ROOT_MARKERS[0][1]).exists() and (parent / PROJECT_ROOT_MARKERS[1][0] / PROJECT_ROOT_MARKERS[1][1]).exists():\n",
-    "                project_root = parent\n",
-    "                break\n",
-    "    \n",
-    "    # Change to project root and store it\n",
-    "    os.chdir(project_root)\n",
-    "    builtins.__project_root__ = project_root\n",
-    "    return project_root\n",
+    "        print(\"⚠️  ERROR: Initialization cell not run!\")\n",
+    "        print(\"   Please run the 'Initialization: Project Root Detection Utilities' cell above first.\")\n",
+    "        print(\"   This cell must be run before Step 2, 3, and 4.\")\n",
+    "        raise NameError(\"Initialization utilities not found. Please run the Initialization cell first.\")\n",
     "\n",
-    "    \n",
-    "    # Check if we're in notebooks/setup/ (go up 2 levels)\n",
-    "    if (current / NOTEBOOK_FILENAME).exists() or current.name == NOTEBOOK_SETUP_DIR:\n",
-    "        parent = current.parent.parent\n",
-    "        if (parent / PROJECT_ROOT_MARKERS[0][0] / PROJECT_ROOT_MARKERS[0][1]).exists() and (parent / PROJECT_ROOT_MARKERS[1][0] / PROJECT_ROOT_MARKERS[1][1]).exists():\n",
-    "            return parent\n",
-    "    \n",
-    "    # Check if we're in notebooks/ (go up 1 level)\n",
-    "    if current.name == NOTEBOOKS_DIR:\n",
-    "        parent = current.parent\n",
-    "        if (parent / PROJECT_ROOT_MARKERS[0][0] / PROJECT_ROOT_MARKERS[0][1]).exists() and (parent / PROJECT_ROOT_MARKERS[1][0] / PROJECT_ROOT_MARKERS[1][1]).exists():\n",
-    "            return parent\n",
-    "    \n",
-    "    # Try going up from current directory\n",
-    "    for parent in current.parents:\n",
-    "        if (parent / PROJECT_ROOT_MARKERS[0][0] / PROJECT_ROOT_MARKERS[0][1]).exists() and (parent / PROJECT_ROOT_MARKERS[1][0] / PROJECT_ROOT_MARKERS[1][1]).exists():\n",
-    "            return parent\n",
-    "    \n",
-    "    # Fallback: return current directory\n",
-    "    return current\n",
+    "# Get project root using the initialization function\n",
+    "project_root = get_project_root()\n",
     "\n",
-    "# Find and change to project root\n",
-    "project_root = find_project_root()\n",
-    "is_in_repo = (project_root / PROJECT_ROOT_MARKERS[0][0] / PROJECT_ROOT_MARKERS[0][1]).exists() and (project_root / PROJECT_ROOT_MARKERS[1][0] / PROJECT_ROOT_MARKERS[1][1]).exists()\n",
+    "# Verify we're in the repository\n",
+    "is_in_repo = (project_root / PROJECT_ROOT_MARKERS[0][0] / PROJECT_ROOT_MARKERS[0][1]).exists() and \\\n",
+    "             (project_root / PROJECT_ROOT_MARKERS[1][0] / PROJECT_ROOT_MARKERS[1][1]).exists()\n",
     "\n",
     "if is_in_repo:\n",
-    "    # Change to project root so all subsequent operations work correctly\n",
-    "    os.chdir(project_root)\n",
-    "    # Store project_root globally so other cells can use it\n",
-    "    import builtins\n",
-    "    builtins.__project_root__ = project_root\n",
-    "    builtins.__find_project_root__ = find_project_root\n",
-    "    print(\"✅ You're already in the Warehouse Operational Assistant repository!\")\n",
+    "    print(\"✅ Repository verified!\")\n",
     "    print(f\"   Project root: {project_root}\")\n",
-    "    print(f\"   Changed working directory to: {Path.cwd()}\")\n",
-    "    print(\"\\n📝 You can skip the cloning step and proceed to environment setup.\")\n",
+    "    print(f\"   Working directory: {Path.cwd()}\")\n",
+    "    print(\"\\n📝 Repository is set up correctly. Proceed to Step 3 (Environment Setup).\")\n",
     "else:\n",
     "    print(\"📦 Repository Setup Instructions\")\n",
     "    print(\"=\" * 60)\n",
@@ -385,34 +421,31 @@
     "    )\n",
     "    return result.returncode == 0, result.stdout, result.stderr\n",
     "\n",
-    "# Get project root (from Step 2 if available, otherwise find it)\n",
-    "try:\n",
-    "    import builtins\n",
-    "    if hasattr(builtins, '__project_root__'):\n",
-    "        project_root = builtins.__project_root__\n",
-    "    elif hasattr(builtins, '__find_project_root__'):\n",
-    "        project_root = builtins.__find_project_root__()\n",
+    "# Ensure initialization utilities are available\n",
+    "# If they're not defined, try to get them from builtins (from initialization cell)\n",
+    "import builtins\n",
+    "if 'PROJECT_ROOT_MARKERS' not in globals():\n",
+    "    if hasattr(builtins, '__PROJECT_ROOT_MARKERS__'):\n",
+    "        PROJECT_ROOT_MARKERS = builtins.__PROJECT_ROOT_MARKERS__\n",
+    "        get_project_root = builtins.__get_project_root__\n",
     "    else:\n",
-    "        # Fallback: try to find project root\n",
-    "        current = Path.cwd()\n",
-    "        for parent in current.parents:\n",
-    "            if (parent / PROJECT_ROOT_MARKERS[0][0] / PROJECT_ROOT_MARKERS[0][1]).exists() and (parent / PROJECT_ROOT_MARKERS[1][0] / PROJECT_ROOT_MARKERS[1][1]).exists():\n",
-    "                project_root = parent\n",
-    "                break\n",
-    "        else:\n",
-    "            project_root = current\n",
-    "except:\n",
-    "    # Fallback: try to find project root\n",
-    "    current = Path.cwd()\n",
-    "    project_root = current\n",
-    "    for parent in current.parents:\n",
-    "        if (parent / PROJECT_ROOT_MARKERS[0][0] / PROJECT_ROOT_MARKERS[0][1]).exists() and (parent / PROJECT_ROOT_MARKERS[1][0] / PROJECT_ROOT_MARKERS[1][1]).exists():\n",
-    "            project_root = parent\n",
-    "            break\n",
+    "        print(\"⚠️  ERROR: Initialization cell not run!\")\n",
+    "        print(\"   Please run the 'Initialization: Project Root Detection Utilities' cell above first.\")\n",
+    "        print(\"   This is especially important after switching kernels.\")\n",
+    "        raise NameError(\"Initialization utilities not found. Please run the Initialization cell first.\")\n",
+    "\n",
+    "# Get project root using the initialization function\n",
+    "try:\n",
+    "    project_root = get_project_root()\n",
+    "except NameError:\n",
+    "    print(\"⚠️  ERROR: get_project_root() not available!\")\n",
+    "    print(\"   Please run the 'Initialization: Project Root Detection Utilities' cell above first.\")\n",
+    "    raise\n",
     "\n",
     "# Check if requirements.txt exists\n",
     "requirements_file = project_root / \"requirements.txt\"\n",
-    "is_in_repo = (project_root / PROJECT_ROOT_MARKERS[0][0] / PROJECT_ROOT_MARKERS[0][1]).exists() and (project_root / PROJECT_ROOT_MARKERS[1][0] / PROJECT_ROOT_MARKERS[1][1]).exists()\n",
+    "is_in_repo = (project_root / PROJECT_ROOT_MARKERS[0][0] / PROJECT_ROOT_MARKERS[0][1]).exists() and \\\n",
+    "             (project_root / PROJECT_ROOT_MARKERS[1][0] / PROJECT_ROOT_MARKERS[1][1]).exists()\n",
     "\n",
     "if not requirements_file.exists() or not is_in_repo:\n",
     "    print(f\"\\n⚠️  WARNING: Repository not found!\")\n",
@@ -943,11 +976,28 @@
     "import getpass\n",
     "from pathlib import Path\n",
     "import re\n",
+    "import builtins\n",
+    "\n",
+    "# Ensure initialization utilities are available\n",
+    "if 'get_project_root' not in globals():\n",
+    "    if hasattr(builtins, '__get_project_root__'):\n",
+    "        get_project_root = builtins.__get_project_root__\n",
+    "    else:\n",
+    "        print(\"⚠️  ERROR: Initialization cell not run!\")\n",
+    "        print(\"   Please run the 'Initialization: Project Root Detection Utilities' cell above first.\")\n",
+    "        def get_project_root():\n",
+    "            raise NameError(\"Initialization utilities not found. Please run the Initialization cell first.\")\n",
     "\n",
     "def setup_api_keys():\n",
     "    \"\"\"Interactive setup for API keys (NVIDIA and/or Brev).\"\"\"\n",
     "    # Get project root (works from any directory)\n",
-    "    project_root = get_project_root()\n",
+    "    try:\n",
+    "        project_root = get_project_root()\n",
+    "    except NameError as e:\n",
+    "        print(f\"⚠️  ERROR: {e}\")\n",
+    "        print(\"   Please run the 'Initialization: Project Root Detection Utilities' cell above first.\")\n",
+    "        return False\n",
+    "    \n",
     "    print(\"🔑 API Key Configuration\")\n",
     "    print(\"=\" * 60)\n",
     "    \n",
